test/optimizations/remoteValueForwarding/serialization/returnsVoid.serialize.good
returnsVoid.chpl:7: error: chpl__serialize cannot return void
